MAGETWO-58067: [GitHub] Data Loss for Country Multiselect in Backend on Website Level

--- a/app/code/Magento/Backend/view/adminhtml/templates/system/shipping/applicable_country.phtml
+++ b/app/code/Magento/Backend/view/adminhtml/templates/system/shipping/applicable_country.phtml
@@ -68,7 +68,7 @@ CountryModel.prototype = {
             if (specifCountryElement) {
                 if (applyCountryElement.value == 1) {
                    // enable related country select only if its 'Use Default' checkbox is absent or is unchecked
-                   specifCountryElement.disabled = (useDefaultElement) ? useDefaultElement.checked : false;
+                   specifCountryElement.disabled = useDefaultElement ? useDefaultElement.checked : false;
                    if (showMethodElement) {
                        this.showElement(showMethodElement.up(1));
                    }
