MAGETWO-55838: [Add address] Same address can be added several times at once

--- a/app/code/Magento/Customer/view/frontend/templates/address/edit.phtml
+++ b/app/code/Magento/Customer/view/frontend/templates/address/edit.phtml
@@ -203,7 +203,7 @@
 <script type="text/x-magento-init">
     {
         "#form-validate": {
-            "validation": {}
+            "addressValidation": {}
         },
         "#country": {
             "regionUpdater": {
