MAGETWO-50412: [GITHUB] Issues with adding groups on attribute set creation page (#3607)

--- a/app/code/Magento/Ui/view/adminhtml/web/templates/modal/modal-prompt-content.html
+++ b/app/code/Magento/Ui/view/adminhtml/web/templates/modal/modal-prompt-content.html
@@ -13,7 +13,7 @@
             </label>
             <% } %>
             <div class="admin__field-control">
-                <input type="text" data-role="prompt-field" id="prompt-field-<%- data.id %>" class="admin__control-text" <%= inputAttr %>/>
+                <input type="text" data-role="promptField" id="prompt-field-<%- data.id %>" class="admin__control-text" <%= inputAttr %>/>
             </div>
         </div>
     </fieldset>
