--- a/app/code/Magento/Ui/view/base/web/templates/modal/modal-prompt-content.html
+++ b/app/code/Magento/Ui/view/base/web/templates/modal/modal-prompt-content.html
@@ -13,7 +13,7 @@
             </label>
             <% } %>
             <div class="control">
-                <input type="text" data-role="prompt-field" id="prompt-field-<%- data.id %>" class="input-text" <%= inputAttr %>/>
+                <input type="text" data-role="promptField" id="prompt-field-<%- data.id %>" class="input-text" <%= inputAttr %>/>
             </div>
         </div>
     </fieldset>
