MAGETWO-55849: Customer can be deleted without Merchant permissions verification

--- a/app/code/Magento/User/view/adminhtml/templates/user/roles_grid_js.phtml
+++ b/app/code/Magento/User/view/adminhtml/templates/user/roles_grid_js.phtml
@@ -70,4 +70,13 @@ require([
 <?php endif; ?>
 
 });
+    function deleteUserAccount(message, url, objId) {
+        if (jQuery.validator.validateElement(jQuery('[name="current_password"]'))) {
+            postData = {'data' : {
+                'user_id': objId,
+                'current_password': jQuery('[name="current_password"]').val()
+            }}
+            deleteConfirm(message, url, postData);
+        }
+    }
 </script>
