MAGETWO-57210: [github #6195, 4101] Gallery doesn't show all images added to configurable options
- Remove redundant configuration for the Swatches module.
- Add descrtiption of the "gallerySwitchStrategy" option.

--- a/app/code/Magento/Swatches/view/frontend/templates/product/view/renderer.phtml
+++ b/app/code/Magento/Swatches/view/frontend/templates/product/view/renderer.phtml
@@ -17,7 +17,7 @@
                     echo $swatchOptions = $block->getJsonSwatchConfig(); ?>,
                 "mediaCallback": "<?php /* @escapeNotVerified */ echo $block->getMediaCallback() ?>",
                 "gallerySwitchStrategy": "<?php /* @escapeNotVerified */ echo $block->getVar('gallery_switch_strategy',
-                    'Magento_Swatches') ?: 'replace'; ?>"
+                    'Magento_ConfigurableProduct') ?: 'replace'; ?>"
             }
         }
     }
