--- a/app/design/frontend/Magento/blank/Magento_Checkout/web/css/source/module/checkout/_payments.less
+++ b/app/design/frontend/Magento/blank/Magento_Checkout/web/css/source/module/checkout/_payments.less
@@ -24,8 +24,8 @@
 & when (@media-common = true) {
     .checkout-payment-method {
         .step-title {
-            margin-bottom: 0;
             border-bottom: 0;
+            margin-bottom: 0;
         }
 
         .payment-method {
@@ -86,8 +86,8 @@
             }
         }
 
-        .payment-methods-list {
-            & + .payment-methods-list {
+        .payment-group {
+            & + .payment-group {
                 .step-title {
                     margin: @indent__base 0 0;
                 }
